--- a/index.html
+++ b/index.html
@@ -16,10 +16,23 @@
 </head>
 <body>
 
-  Features
-  Team
-  Sign In
+  <container class="page">
 
+    <div class="page-div">
+
+      <nav class="nav-bar">
+      
+        <div class="logo">
+          <img src="./images/logo.svg" alt="logo">
+        </div>
+      
+        <div class="nav-list">
+          <p class="nav-p">Features</p>
+          <p class="nav-p">Team</p>
+          <p class="nav-p">Sign In</p>
+        </div>
+
+      </nav>
   All your files in one secure location, accessible anywhere.
 
   Fylo stores your most important files in one secure location. 
@@ -69,5 +82,8 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+</div>
+</container>
+
 </body>
 </html>
