hero image and flex

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="hero-img">
-    
+        <img src="./images/illustration-1.svg" alt="hero-illustration">
       </div>
 
     </div>
