feature card wip

--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@
           
           <div class="author"> 
             <img src="./images/avatar-testimonial.jpg" alt="avatar">
-            <p class="name">Kyle Burton</p>
-            <p class="role">Founder & CEO, Huddle</p>
+
+            <div class="author-details">
+              <p class="author-name" id="name">Kyle Burton</p>
+              <p class="author-role" id="role">Founder & CEO, Huddle</p>
+            </div>
           </div>
         </div>
 
