--- a/index.html
+++ b/index.html
@@ -100,13 +100,21 @@
 
     </div>
 
-    <!------------------EARLY ACCESS----------->
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
+    <!------------------SIGNUP----------->
+  
+    <div class="signup">
+      <h2 class="signup-title">Get early access today</h2>
+    
+      <p class="signup-p">It only takes a minute to sign up and our free starter tier is extremely generous.
+        If you have any questions, our support team would be happy to help you.</p>
+    
+      <div class="input-button">
+        <form action="" class="email">
+          <input type="email" id="email" name="email" placeholder="Enter your email here...">
+        </form>
+        <button class="hero-btn">Get Started</button>
+      </div>
+    </div>
 
   Phone: +1-543-123-4567
   example@fylo.com
