--- a/index.html
+++ b/index.html
@@ -103,17 +103,21 @@
     <!------------------SIGNUP----------->
   
     <div class="signup">
-      <h2 class="signup-title">Get early access today</h2>
+
+      <div class="signup-text">
+        <h2 class="signup-title">Get early access today</h2>
     
-      <p class="signup-p">It only takes a minute to sign up and our free starter tier is extremely generous.
-        If you have any questions, our support team would be happy to help you.</p>
-    
-      <div class="input-button">
+        <p class="signup-p">It only takes a minute to sign up and our free starter tier is extremely generous.
+          If you have any questions, our support team would be happy to help you.</p>
+      </div>
+
+      <div class="signup-button">
         <form action="" class="email">
           <input type="email" id="email" name="email" placeholder="Enter your email here...">
         </form>
         <button class="hero-btn">Get Started</button>
       </div>
+
     </div>
 
   Phone: +1-543-123-4567
