added footer logo

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!--------------------FOOTER------------------------------>
     <section class="footer-section">
       <div class="footer-logo">
-        <img src="./images/logo.svg" alt="logo">
+        <img src="./images/wlogo.svg" alt="logo" id="footerLogo">
       </div>
 
       <div class="footer">
