--- a/index.html
+++ b/index.html
@@ -128,8 +128,12 @@
       <div class="footer">
         
         <div class="contact">
-          <p class="phone">Phone: +1-543-123-4567</p>
-          <p class="email">example@fylo.com</p>
+          <p class="phone">
+            <img src="./images/icon-phone.svg" width="20" height="15">
+            Phone: +1-543-123-4567</p>
+          <p class="email">
+            <img src="./images/icon-email.svg" width="20" height="15">
+            example@fylo.com</p>
         </div>
     
         <div class="site-links">
