--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     
         <div class="signup-button">
           <form action="" class="email">
-            <input type="email" id="email" name="email" placeholder="Enter your email here...">
+            <input type="email" id="signup-email" name="email" placeholder="Enter your email here...">
           </form>
-          <button class="hero-btn">Get Started</button>
+          <button class="hero-btn" id="signup-btn">Get Started</button>
         </div>
     
       </div>
