--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <form action="" class="email">
             <input type="email" id="signup-email" name="email" placeholder="Enter your email here...">
           </form>
-          <button class="hero-btn" id="signup-btn">Get Started</button>
+          <button class="hero-btn" id="signup-btn">Get Started For Free</button>
         </div>
     
       </div>
