missing alt for img

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
         
         <div class="contact">
           <p class="phone">
-            <img src="./images/icon-phone.svg" width="20" height="15">
+            <img src="./images/icon-phone.svg" width="20" height="15" alt="phone-icon">
             Phone: +1-543-123-4567</p>
           <p class="email">
-            <img src="./images/icon-email.svg" width="20" height="15">
+            <img src="./images/icon-email.svg" width="20" height="15" alt="mail-icon">
             example@fylo.com</p>
         </div>
     
